[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/vox_gen/VoxGen.gd" type="Script" id=1]
[ext_resource path="res://scenes/Planet.gd" type="Script" id=2]
[ext_resource path="res://resources/orb_world.tres" type="Resource" id=3]

[sub_resource type="BoxShape" id=1]

[node name="Planet" type="Area" groups=["Planet"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -195.558, 84.5978, 0 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
spawn_buffer = 0.5
props = ExtResource( 3 )

[node name="VoxGen" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="SpawnCast" type="RayCast" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
unique_name_in_owner = true
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Planet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Planet_body_exited"]
[connection signal="child_entered_tree" from="." to="." method="_on_Planet_child_entered_tree"]
[connection signal="initialized" from="VoxGen" to="." method="_on_VoxGen_initialized"]
